# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/multimedia/image_standard"

ohos_shared_library("pixelmap_ndk") {
  include_dirs = [ "include" ]

  sources = [ "image_pixel_map_napi.cpp" ]

  public_configs =
      [ "$SUBSYSTEM_DIR/interfaces/innerkits:image_external_config" ]

  deps = [
    "$SUBSYSTEM_DIR/interfaces/innerkits:image",
    "//foundation/arkui/napi:ace_napi",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_image_standard"
}
