# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/image_standard/ide/image_decode_config.gni")

ohos_shared_library("jpegplugin") {
  sources = [
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libjpegplugin/src/exif_info.cpp",
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libjpegplugin/src/jpeg_decoder.cpp",
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libjpegplugin/src/jpeg_utils.cpp",
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libjpegplugin/src/plugin_export.cpp",
  ]

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_standard/plugins/manager/include",
    "//foundation/multimedia/image_standard/plugins/manager/include/image",
    "//foundation/multimedia/image_standard/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_standard/plugins/common/libs/image/libjpegplugin/include",
    "//foundation/multimedia/image_standard/interfaces/innerkits/include",
    "//foundation/multimedia/image_standard/frameworks/innerkitsimpl/utils/include",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "//third_party/flutter/skia/include/codec",
    "//third_party/flutter/skia",
    "//third_party/flutter/skia/include/core",
    "//third_party/flutter/skia/third_party/libjpeg-turbo",
    "//third_party/libexif",
  ]

  if (use_mingw_win) {
    defines = image_decode_windows_defines
    include_dirs += [
      "//foundation/multimedia/image_standard/mock/native/include",

      "//third_party/flutter/skia/third_party/libjpeg-turbo",
    ]
    deps = [
      "//foundation/ace/ace_engine/build/external_config/flutter/libjpeg:ace_libjpeg",
      "//foundation/multimedia/image_standard/interfaces/innerkits:image_static",
      "//foundation/multimedia/image_standard/mock/native:utils_mock_static",
      "//foundation/multimedia/image_standard/plugins/manager:pluginmanager_static",
      "//third_party/libexif:libexif",
    ]
  } else if (use_clang_mac) {
    defines = image_decode_mac_defines
    include_dirs += [
      "//foundation/multimedia/image_standard/mock/native/include",
      "//third_party/flutter/skia/third_party/libjpeg-turbo",
    ]
    deps = [
      "//foundation/ace/ace_engine/build/external_config/flutter/libjpeg:ace_libjpeg",
      "//foundation/multimedia/image_standard/interfaces/innerkits:image_static",
      "//foundation/multimedia/image_standard/mock/native:utils_mock_static",
      "//foundation/multimedia/image_standard/plugins/manager:pluginmanager_static",
      "//third_party/libexif:libexif",
    ]
  } else {
    defines = [ "DUAL_ADAPTER" ]
    DUAL_ADAPTER = true
    include_dirs += [ "//utils/native/base/include" ]
    sources += [ "//foundation/multimedia/image_standard/plugins/common/libs/image/libjpegplugin/src/jpeg_encoder.cpp" ]
    deps = [
      #"//third_party/flutter/skia/third_party/libjpeg-turbo:libjpeg",
      "//foundation/ace/ace_engine/build/external_config/flutter/libjpeg:ace_libjpeg",
      "//foundation/multimedia/image_standard/interfaces/innerkits:image_native",
      "//foundation/multimedia/image_standard/plugins/manager:pluginmanager",
      "//third_party/libexif:libexif",
      "//utils/native/base:utils",
    ]

    if (DUAL_ADAPTER) {
    } else {
      deps += [
        "//foundation/ace/ace_engine/build/external_config/flutter/libjpeg:ace_libjpeg",
        "//third_party/libexif:libexif",
      ]
      include_dirs += [ "//third_party/flutter/skia/third_party/libjpeg-turbo" ]
    }

    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  }

  part_name = "multimedia_image_standard"

  subsystem_name = "multimedia"
}

ohos_prebuilt_etc("jpegpluginmetadata") {
  source = "jpegplugin.pluginmeta"
  relative_install_dir = "multimediaplugin/image"
  subsystem_name = "multimedia"
  part_name = "multimedia_image_standard"
}
